# Ds

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  README.md  init.sh
include/ae2f/Ds/: Alloc.h  Alloc.hpp  Arr.h  Arr.hpp
include/ae2f/Ds/Alloc/: Defs.hpp  Err.h  Own.h  Own.hpp  Ref.h  Ref.hpp
include/ae2f/Ds/Arr/: Defs.hpp  Err.h  Own.hpp  Pack.hpp  Ref.hpp
mod/ae2f/: init.sh
src/: Alloc.c  Arr.c
src/Alloc/: Linear.c
test/: AllocTest.c  ArrTest.c  CMakeLists.txt  main.c  test.h  xAllocTest.cpp  xArrTest.cpp
test/src/: AllocTest.c  ArrTest.c  xAllocTest.cpp  xArrTest.cpp
